--- a/koodi/pyproject.toml
+++ b/koodi/pyproject.toml
@@ -8,6 +8,9 @@ readme = "../README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 coverage = "^7.2.6"
+mido = "^1.2.10"
+invoke = "^2.1.3"
+datetime = "^5.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,3 +21,5 @@ pylint = "^2.17.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
